Optimize diespeker image. Stop serving 600kb jpg and serve a lower quality version on mobile.

--- a/source/stylesheets/header.css.scss
+++ b/source/stylesheets/header.css.scss
@@ -1,9 +1,13 @@
 .site-header {
   position: relative;
   padding: 50px;
-  background: url("../images/diespeker.jpg") no-repeat center center;
+  background: url("../images/diespeker_small.jpg") no-repeat center center;
   background-size: cover;
   text-align: center;
+
+  @media (min-width: 30em) {
+    background-image: url(../images/diespeker.jpg);
+  }
 }
 
 .site-header:after {
